@@ -4,6 +4,7 @@
     <string id="32010">No-IP host</string>
     <string id="32011">No-IP e-mail</string>
     <string id="32012">No-IP password</string>
+    <string id="32013">Show notification when update happens</string>
     <string id="32021">Update interval [hours]</string>
     <string id="32030">There is an error with your settings</string>
     <string id="32031">Update service not configured</string>
