@@ -1,2 +1,4 @@
+[B]0.0.6[/B]
+- Notification is a configurable parameter
 [B]0.0.5[/B]
 - Initial commit
